--- a/src/app/components/alumnos/alumnos.component.html
+++ b/src/app/components/alumnos/alumnos.component.html
@@ -1,22 +1,30 @@
-<h1>{{titulo}}</h1>
-<table class="table table-hover table-striped">
-  <thead>
-    <tr>
-      <th>id</th>
-      <th>nombre</th>
-      <th>apellido</th>
-      <th>email</th>
-      <th>creado en</th>
-    </tr>
-  </thead>
+<div class="card text-bg-light mb-3" style="max-width: 18rem;">
+  <div class="card-header">{{titulo}}</div>
+  <div class="card-body">
+    <table class="table table-hover table-striped">
+      <thead>
+        <tr>
+          <th>id</th>
+          <th>nombre</th>
+          <th>apellido</th>
+          <th>email</th>
+          <th>creado en</th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <tr *ngFor="let alumno of alumnos">
-      <td>{{alumno.id}}</td>
-      <td>{{alumno.nombre}}</td>
-      <td>{{alumno.apellido}}</td>
-      <td>{{alumno.email}}</td>
+      <tbody>
+        <tr *ngFor="let alumno of alumnos">
+          <td>{{alumno.id}}</td>
+          <td>{{alumno.nombre}}</td>
+          <td>{{alumno.apellido}}</td>
+          <td>{{alumno.email}}</td>
 
-    </tr>
-  </tbody>
-</table>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+</div>
+
+
+
